# vulcan

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  go.mod  main.go
.github/workflows/: ci.yml  hardening.yml  release.yml
docs/: ROADMAP.md  cli.md  design_document.md  hardening.md  performance.md
docs/assistant/: AGENTS.template.md  custom_tools.md  native_runtime_deferred.md  pi_integration.md  skill_commands.md
docs/assistant/prompts/: daily-review.md  summarize-note.md
docs/assistant/skills/: configuration-and-permissions.md  conversation-export.md  daily-notes.md  dataview-and-bases.md  diagnostics-and-repair.md  git-workflow.md  graph-exploration.md  index-maintenance.md  js-api-guide.md  link-curation.md  mcp-setup.md  note-operations.md  plugin-authoring.md  properties-and-tags.md  publishing-and-export.md  refactoring.md  skill-creator.md  task-management.md  templates-and-capture.md  vault-query.md  web-research.md
docs/assistant/skills/conversation-export/: export-conversation.js
docs/assistant/tools/summarize_note/: TOOL.md  main.js
docs/examples/: recipes.md
docs/examples/frontend-bundle-reference/: frontend-bundle.json
docs/examples/frontend-bundle-reference/notes/home/: index.json
docs/examples/static-site-theme-reference/: README.md  footer.html  head.html  header.html  left_rail.html  nav.html  note_after.html  note_before.html  right_rail.html  theme.css  theme.js  toolbar.html
docs/guide/: assistant.md  automation-surfaces.md  chatgpt-mcp.md  filters.md  getting-started.md  query-dsl.md  sandbox.md  scripting.md  skill_command.md  static-sites.md
docs/investigations/: parser_comparison.md  pulldown_cmark_wikilinks.md  sqlite_vec_rust_build.md  vector_duplicates_ann.md  web_fetch_extract_backends.md
docs/reference/: config.md
docs/reference/js-api/: contract.json  contract.md  graph.md  host.md  index.md  note-object.md  plugins.md  skills.md  tools.md  vault.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: chunker.rs  config.rs  dql.rs  expression.rs  frontmatter.rs  links.rs  parser.rs  tasks.rs
scripts/: benchmark_scan.sh  benchmark_search.sh  benchmark_vectors.sh  compare_feature_matrix.sh  generate_synthetic_vault.py
tests/fixtures/vaults/ambiguous-links/: Root.md
tests/fixtures/vaults/ambiguous-links/Archive/: Topic.md
tests/fixtures/vaults/attachments/: Home.md
tests/fixtures/vaults/bases/: Backlog.md  Done.md  Review.md  release.base
tests/fixtures/vaults/basic/: Home.md
tests/fixtures/vaults/broken-frontmatter/: Broken.md  Clean.md
tests/fixtures/vaults/dataview/: Dashboard.md
tests/fixtures/vaults/hardening/: Broken.md  Dashboard.md  Home.md
tests/fixtures/vaults/mixed-properties/: Backlog.md  Done.md  Mixed.md
tests/fixtures/vaults/move-rewrite/: Home.md
tests/fixtures/vaults/polish-vault/: Clippings-Dashboard.md
tests/fixtures/vaults/refactors/: Home.md
tests/fixtures/vaults/suggestions/: Home.md
vulcan-app/: Cargo.toml
vulcan-app/src/: assistant_session_export.rs  browse.rs  config.rs  error.rs  export.rs  lib.rs  notes.rs  plugins.rs  scan.rs  serve.rs  site.rs  tasks.rs  templates.rs  tools.rs  trust.rs  web.rs
vulcan-app/src/export/: sqlite.rs  tests.rs  text.rs  zip.rs
vulcan-app/src/site/: assets.rs  tests.rs  types.rs
vulcan-app/src/tasks/: tests.rs  types.rs
vulcan-app/src/templates/: frontmatter.rs  tests.rs
vulcan-app/src/tools/: cli_args.rs  lint.rs  skill_commands.rs  tests.rs  typescript.rs
vulcan-cli/: Cargo.toml
vulcan-cli/src/: bases_tui.rs  browse_tui.rs  bundle_server.rs  cli.rs  commit.rs  completions_bash.sh  completions_fish.fish  completions_zsh.zsh  config_tui.rs  editor.rs  help.rs  js_repl.rs  lib.rs  main.rs  mcp.rs  note_picker.rs  output.rs  plugins.rs  resolve.rs  serve.rs  site_server.rs  template_engine.rs  terminal_markdown.rs  tests.rs  trust.rs
vulcan-cli/src/assistant/: chat.rs  chat_transport.rs  engine.rs  extension.rs  mod.rs  renderer.rs  rpc.rs  rpc_events.rs
vulcan-cli/src/assistant/extension/vulcan-tools/: index.ts  package.json
vulcan-cli/src/commands/: agent.rs  bases.rs  browse.rs  cache.rs  completions.rs  config.rs  dataview.rs  docs.rs  edit.rs  graph.rs  inbox.rs  index.rs  kanban.rs  mod.rs  note.rs  open.rs  periodic.rs  plugin.rs  query.rs  refactor.rs  render.rs  runtime.rs  skill.rs  status.rs  tasks.rs  template.rs  tool.rs  tool_init.rs  vectors.rs
vulcan-cli/src/mcp/: catalog.rs  protocol.rs  schemas.rs  tests.rs
vulcan-cli/tests/: boundary_guard.rs  cli_smoke.rs
vulcan-cli/tests/snapshots/: commands_composite.json  doctor_broken_frontmatter.json  help_config.json  saved_reports_and_exports.json  scan_basic_full.json  search_basic_dashboard.json
vulcan-core/: Cargo.toml
vulcan-core/proptest-regressions/: query.txt
vulcan-core/src/: assistant.rs  bases.rs  chunking.rs  content_transforms.rs  dataview_js.rs  doctor.rs  extraction.rs  file_metadata.rs  git.rs  graph.rs  history.rs  html.rs  init.rs  json_schema.rs  kanban.rs  lib.rs  maintenance.rs  move_rewrite.rs  note.rs  oauth.rs  paths.rs  periodic.rs  permissions.rs  properties.rs  query.rs  refactor.rs  render.rs  resolver.rs  saved_queries.rs  scan.rs  search.rs  suggestions.rs  tasknotes.rs  tasks.rs  vector.rs  watch.rs  web.rs  write_lock.rs
vulcan-core/src/cache/: error.rs  migrations.rs  mod.rs  schema.rs
vulcan-core/src/config/: default_config.toml  defaults.rs  importers.rs  mod.rs  obsidian.rs  partial.rs  tests.rs
vulcan-core/src/dql/: ast.rs  compile.rs  eval.rs  mod.rs  parse.rs  token.rs
vulcan-core/src/expression/: ast.rs  eval.rs  functions.rs  methods.rs  mod.rs  parse.rs  token.rs  value.rs
vulcan-core/src/parser/: block_ref.rs  comment_scanner.rs  dataview.rs  link_classifier.rs  mod.rs  options.rs  semantic_pass.rs  tag_extractor.rs  types.rs
vulcan-core/src/tasks/: ast.rs  eval.rs  parse.rs  recurrence.rs
vulcan-core/tests/: minimal_non_ai.rs
vulcan-embed/: Cargo.toml
vulcan-embed/src/: lib.rs  openai_compat.rs  provider.rs  sqlite_vec.rs  store.rs
(+52 files in other folders)
