[workspace]
members = ["vulcan-cli", "vulcan-core", "vulcan-embed"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
assert_cmd = "2.1.1"
blake3 = "1.8.2"
clap = { version = "4.5.49", features = ["derive", "string"] }
clap_complete = "4.5.61"
fs2 = "0.4.3"
ignore = "0.4.25"
notify = "8.2.0"
predicates = "3.1.3"
pulldown-cmark = "0.13.0"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rayon = "1.11.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlite-vec = "0.1.7"
tempfile = "3.23.0"
toml = "0.8.23"
ulid = { version = "1.2.1", features = ["serde"] }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
