[package]
name = "vulcan-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
vulcan-core = { path = "../vulcan-core" }

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "frontmatter"
path = "fuzz_targets/frontmatter.rs"
test = false
doc = false
bench = false

[[bin]]
name = "links"
path = "fuzz_targets/links.rs"
test = false
doc = false
bench = false

[[bin]]
name = "chunker"
path = "fuzz_targets/chunker.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dql"
path = "fuzz_targets/dql.rs"
test = false
doc = false
bench = false

[[bin]]
name = "expression"
path = "fuzz_targets/expression.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tasks"
path = "fuzz_targets/tasks.rs"
test = false
doc = false
bench = false

[[bin]]
name = "config"
path = "fuzz_targets/config.rs"
test = false
doc = false
bench = false
