[package]
name = "vulcan-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["js_runtime"]
js_runtime = ["vulcan-core/js_runtime"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
vulcan-core = { path = "../vulcan-core", default-features = false }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
