[package]
name = "vulcan-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["js_runtime"]
js_runtime = ["dep:rquickjs", "vulcan-core/js_runtime"]

[dependencies]
csv.workspace = true
regex.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde_yaml.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
vulcan-core = { path = "../vulcan-core", default-features = false }
rquickjs = { workspace = true, optional = true }
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
