[package]
name = "vulcan-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["js_runtime", "oauth", "vectors", "web"]
js_runtime = ["dep:rquickjs", "vulcan-core/js_runtime"]
oauth = ["vulcan-core/oauth"]
vectors = ["vulcan-core/vectors"]
web = ["dep:reqwest", "vulcan-core/web"]

[dependencies]
blake3.workspace = true
csv.workspace = true
pulldown-cmark.workspace = true
regex.workspace = true
reqwest = { workspace = true, optional = true }
rusqlite.workspace = true
serde_yaml.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
vulcan-core = { path = "../vulcan-core", default-features = false }
rquickjs = { workspace = true, optional = true }
zip.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
