[package]
name = "vulcan-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "vulcan"

[lib]
name = "vulcan_cli"
path = "src/lib.rs"

[[bin]]
name = "vulcan"
path = "src/main.rs"

[features]
default = ["js_runtime"]
js_runtime = ["dep:rquickjs", "vulcan-app/js_runtime", "vulcan-core/js_runtime"]

[dependencies]
clap.workspace = true
clap_complete.workspace = true
crossterm.workspace = true
csv.workspace = true
ratatui.workspace = true
regex.workspace = true
pulldown-cmark.workspace = true
rquickjs = { workspace = true, optional = true }
rustyline.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ulid.workspace = true
vulcan-app = { path = "../vulcan-app", default-features = false }
vulcan-core = { path = "../vulcan-core", default-features = false }
zip.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
rusqlite.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true

[lints]
workspace = true
