[package]
name = "vulcan-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
default-run = "vulcan"

[lib]
name = "vulcan_cli"
path = "src/lib.rs"

[[bin]]
name = "vulcan"
path = "src/main.rs"

[features]
default = ["js_runtime", "oauth", "vectors", "web"]
js_runtime = ["dep:rquickjs", "vulcan-app/js_runtime", "vulcan-core/js_runtime"]
oauth = ["vulcan-app/oauth", "vulcan-core/oauth"]
vectors = ["vulcan-app/vectors", "vulcan-core/vectors"]
web = ["vulcan-app/web", "vulcan-core/web"]

[dependencies]
clap.workspace = true
clap_complete.workspace = true
base64.workspace = true
crossterm.workspace = true
csv.workspace = true
ratatui.workspace = true
regex.workspace = true
pulldown-cmark.workspace = true
rquickjs = { workspace = true, optional = true }
rustyline.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
ulid.workspace = true
vulcan-app = { path = "../vulcan-app", default-features = false, features = ["oauth", "vectors", "web"] }
vulcan-core = { path = "../vulcan-core", default-features = false, features = ["oauth", "vectors", "web"] }
zip.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
rusqlite.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true

[lints]
workspace = true
