[package]
name = "vulcan-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = ["js_runtime"]
js_runtime = ["dep:rquickjs", "dep:rquickjs-serde"]

[dependencies]
aho-corasick = "1"
ammonia.workspace = true
blake3.workspace = true
csv.workspace = true
fs2.workspace = true
ignore.workspace = true
libc.workspace = true
notify.workspace = true
pulldown-cmark.workspace = true
rayon.workspace = true
regex.workspace = true
reqwest.workspace = true
rquickjs = { workspace = true, optional = true }
rquickjs-serde = { workspace = true, optional = true }
rs-trafilatura.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
toml.workspace = true
ulid.workspace = true
vulcan-embed = { path = "../vulcan-embed" }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

[lints]
workspace = true
