[package]
name = "vulcan-embed"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlite-vec.workspace = true
ulid.workspace = true

[lints]
workspace = true
